--- a/package.json
+++ b/package.json
@@ -1,24 +1,52 @@
 {
-  "name": "SalesCar",
+  "name": "sales-car",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "ios": "react-native run-ios",
+    "android": "react-native run-android",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "lint": "tslint -c tslint.json 'src/**/*.tsx'",
+    "prettier": "prettier --write 'src/**/*.tsx'",
+    "lint-staged:ts": "tsc --noEmit && tslint -p \".\" -t stylish"
   },
   "dependencies": {
-    "react": "16.8.3",
+    "react": "^16.8.6",
     "react-native": "0.59.8"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.4.5",
+    "@types/react": "^16.8.18",
+    "@types/react-native": "^0.57.59",
     "babel-jest": "^24.8.0",
+    "husky": "^2.3.0",
     "jest": "^24.8.0",
+    "lint-staged": "^8.1.7",
     "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3"
+    "prettier": "^1.17.1",
+    "react-native-typescript-transformer": "^1.2.12",
+    "react-test-renderer": "16.8.3",
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.4.5"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{ts, tsx}": [
+      "pretty-quick --staged",
+      "yarn lint-staged:ts",
+      "git add"
+    ]
   }
 }
