--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
     "android": "react-native run-android",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "lint": "tslint -c tslint.json 'src/**/*.tsx'",
     "prettier": "prettier --write 'src/**/*.tsx'",
     "lint-staged:ts": "tsc --noEmit && tslint -p \".\" -t stylish",
-    "lint-staged": "lint-staged"
+    "lint": "lint-staged:ts"
   },
   "dependencies": {
+    "@ant-design/react-native": "^3.1.8",
+    "dva-core": "^1.4.0",
     "react": "^16.8.6",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-redux": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "@types/react": "^16.8.18",
     "@types/react-native": "^0.57.59",
     "babel-jest": "^24.8.0",
+    "babel-plugin-import": "^1.11.2",
+    "babel-plugin-module-resolver": "^3.2.0",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
