--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dva-core": "^1.4.0",
     "react": "^16.8.6",
     "react-native": "0.59.8",
+    "react-native-gesture-handler": "^1.2.1",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3"
   },
