--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/react-native": "^3.1.8",
     "@react-native-community/async-storage": "^1.4.1",
+    "axios": "^0.18.0",
     "dva-core": "^1.4.0",
     "react": "^16.8.6",
     "react-intl": "^2.9.0",
